--- a/ChampionSelector/index.html
+++ b/ChampionSelector/index.html
@@ -14,7 +14,7 @@
         var championList
         $(document).ready(function () {
             var rgAPIchampionList = "https://global.api.pvp.net/api/lol/static-data/na/v1.2/champion?champData=image&api_key=10e540af-7f4d-4cd5-af70-136b75a66fe6";
-            var rgStaticSquareChampionImageBaseLink = "http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/"
+            var rgStaticSquareChampionImageBaseLink = "https://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/"
             $.getJSON(rgAPIchampionList)
               .done(function (data) {
 
@@ -30,7 +30,7 @@
                   // Now process that object with it:
                   for (var i = 0; i < ChampionNames.length; i++) {
                       var item = data.data[ChampionNames[i]];
-                      $('<div id="' + item.name + '" class="champion" style="background-image:url(' + rgStaticSquareChampionImageBaseLink + item.image.full + ')">' + item.name + '</div>').appendTo("#Content");
+                      $('<a href="/champions/' + item.name + '.html"><div id="' + item.name + '" class="champion" style="background-image:url(' + rgStaticSquareChampionImageBaseLink + item.image.full + ')"><div class="name">' + item.name.toUpperCase() + '</div></div></a>').appendTo("#Content");
 
                       // now do stuff with each item
                   }
